<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/label_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:minWidth="120dp"
        android:background="@color/lightGray"
        android:text="@string/label_bill"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/label_tip_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_bill"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/label_bill"
        android:text="@string/label_tip_percent"
        android:textSize="28sp"
        android:background="@color/lightGray"/>


    <TextView
        android:id="@+id/label_no_of_persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/label_tip_percent"
        android:layout_alignLeft="@+id/label_tip_percent"
        android:text="@string/label_no_of_persons"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_bill"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/label_bill"
        android:gravity="center"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/darkBlue"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/amount_tip_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_tip_percent"
        android:layout_alignBottom="@+id/label_tip_percent"
        android:layout_alignRight="@id/amount_bill"
        android:textSize="28sp"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/no_of_persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_no_of_persons"
        android:layout_alignBottom="@+id/label_no_of_persons"
        android:layout_alignRight="@+id/amount_tip"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:inputType="number"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/label_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/red_line"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:textSize="28sp"
        android:background="@color/lightGray"
        android:text="@string/label_tip"/>

    <TextView
        android:id="@+id/amount_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_tip"
        android:layout_alignBottom="@+id/label_tip"
        android:layout_alignRight="@id/amount_bill"
        android:gravity="center"
        android:textSize="28sp"
        android:background="@color/lightGreen"/>

    <TextView
        android:id="@+id/label_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_below="@id/label_tip"
        android:layout_alignLeft="@+id/label_bill"
        android:layout_alignRight="@+id/label_bill"
        android:textSize="28sp"
        android:background="@color/lightGray"
        android:text="@string/label_total"/>

    <TextView
        android:id="@+id/amount_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_total"
        android:layout_alignBottom="@+id/label_total"
        android:layout_alignRight="@+id/amount_bill"
        android:gravity="center"
        android:textSize="28sp"
        android:background="@color/lightGreen"/>

    <TextView
        android:id="@+id/label_total_per_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/label_total"
        android:textSize="20sp"
        android:text="@string/label_total_per_person" />

    <TextView
        android:id="@+id/total_per_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_toRightOf="@+id/label_total_per_person"
        android:layout_alignBottom="@+id/label_total_per_person"
        android:layout_alignRight="@+id/amount_total"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:textSize="28sp"/>

    <!-- red line above the label tip-->
    <View
        android:id="@+id/red_line"
        android:layout_below="@+id/label_no_of_persons"
        android:layout_marginTop="20dp"
        android:layout_height="5dip"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/label_bill"
        android:layout_alignRight="@id/amount_bill"
        android:background="#FF0000"/>

    <View
        android:id="@+id/black_line_total_per_person"
        android:layout_marginTop="-5dp"
        android:layout_below="@+id/total_per_person"
        android:layout_alignLeft="@+id/total_per_person"
        android:layout_alignRight="@+id/amount_total"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/black"/>

    <!-- black line bext to the label total per person-->


</RelativeLayout>